// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSitemap > Sitemaps Protocol examples > generates URL with only required loc field 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>http://www.example.com/page</loc>
  </url>
</urlset>"
`;

exports[`generateSitemap > Sitemaps Protocol examples > generates basic single URL with all fields 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>http://www.example.com/</loc>
    <lastmod>2005-01-01</lastmod>
    <changefreq>monthly</changefreq>
    <priority>0.8</priority>
  </url>
</urlset>"
`;

exports[`generateSitemap > Sitemaps Protocol examples > generates multiple URLs with various optional fields 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>http://www.example.com/</loc>
    <lastmod>2005-01-01</lastmod>
    <changefreq>monthly</changefreq>
    <priority>0.8</priority>
  </url>
  <url>
    <loc>http://www.example.com/catalog?item=12&amp;desc=vacation_hawaii</loc>
    <changefreq>weekly</changefreq>
  </url>
  <url>
    <loc>http://www.example.com/catalog?item=73&amp;desc=vacation_new_zealand</loc>
    <lastmod>2004-12-23</lastmod>
    <changefreq>weekly</changefreq>
  </url>
  <url>
    <loc>http://www.example.com/catalog?item=74&amp;desc=vacation_newfoundland</loc>
    <lastmod>2004-12-23</lastmod>
    <priority>0.3</priority>
  </url>
  <url>
    <loc>http://www.example.com/catalog?item=83&amp;desc=vacation_usa</loc>
    <lastmod>2004-11-23</lastmod>
  </url>
</urlset>"
`;

exports[`generateSitemap > Sitemaps Protocol examples > generates sitemap with all changefreq values 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>http://www.example.com/always</loc>
    <changefreq>always</changefreq>
  </url>
  <url>
    <loc>http://www.example.com/hourly</loc>
    <changefreq>hourly</changefreq>
  </url>
  <url>
    <loc>http://www.example.com/daily</loc>
    <changefreq>daily</changefreq>
  </url>
  <url>
    <loc>http://www.example.com/weekly</loc>
    <changefreq>weekly</changefreq>
  </url>
  <url>
    <loc>http://www.example.com/monthly</loc>
    <changefreq>monthly</changefreq>
  </url>
  <url>
    <loc>http://www.example.com/yearly</loc>
    <changefreq>yearly</changefreq>
  </url>
  <url>
    <loc>http://www.example.com/never</loc>
    <changefreq>never</changefreq>
  </url>
</urlset>"
`;

exports[`generateSitemap > Sitemaps Protocol examples > generates sitemap with priority boundary values 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>http://www.example.com/low</loc>
    <priority>0</priority>
  </url>
  <url>
    <loc>http://www.example.com/default</loc>
    <priority>0.5</priority>
  </url>
  <url>
    <loc>http://www.example.com/high</loc>
    <priority>1</priority>
  </url>
</urlset>"
`;

exports[`generateSitemap > Sitemaps Protocol examples > generates sitemap without pretty print 1`] = `"<?xml version="1.0" encoding="UTF-8"?><urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"><url><loc>http://www.example.com/</loc><lastmod>2005-01-01</lastmod><changefreq>monthly</changefreq><priority>0.8</priority></url></urlset>"`;

exports[`generateSitemapCollection > basic functionality > generates collection with all URL fields 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>http://www.example.com/sitemap-0.xml</loc>
    <lastmod>2026-01-16</lastmod>
  </sitemap>
</sitemapindex>"
`;

exports[`generateSitemapCollection > basic functionality > generates collection with all URL fields 2`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>http://www.example.com/</loc>
    <lastmod>2005-01-01</lastmod>
    <changefreq>monthly</changefreq>
    <priority>0.8</priority>
  </url>
  <url>
    <loc>http://www.example.com/about</loc>
    <lastmod>2005-06-15</lastmod>
    <changefreq>yearly</changefreq>
    <priority>0.5</priority>
  </url>
</urlset>"
`;

exports[`generateSitemapCollection > basic functionality > generates collection with single sitemap when URLs fit 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>http://www.example.com/sitemap-0.xml</loc>
    <lastmod>2026-01-16</lastmod>
  </sitemap>
</sitemapindex>"
`;

exports[`generateSitemapCollection > basic functionality > generates collection with single sitemap when URLs fit 2`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <url>
    <loc>http://www.example.com/page1</loc>
  </url>
  <url>
    <loc>http://www.example.com/page2</loc>
  </url>
  <url>
    <loc>http://www.example.com/page3</loc>
  </url>
</urlset>"
`;

exports[`generateSitemapIndex > Sitemaps Protocol examples > generates sitemap index with mixed optional fields 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>http://www.example.com/sitemap-posts.xml</loc>
    <lastmod>2026-01-15</lastmod>
  </sitemap>
  <sitemap>
    <loc>http://www.example.com/sitemap-products.xml</loc>
  </sitemap>
  <sitemap>
    <loc>http://www.example.com/sitemap-pages.xml</loc>
    <lastmod>2026-01-10</lastmod>
  </sitemap>
</sitemapindex>"
`;

exports[`generateSitemapIndex > Sitemaps Protocol examples > generates sitemap index with multiple sitemaps 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>http://www.example.com/sitemap1.xml.gz</loc>
    <lastmod>2004-10-01</lastmod>
  </sitemap>
  <sitemap>
    <loc>http://www.example.com/sitemap2.xml.gz</loc>
    <lastmod>2005-01-01</lastmod>
  </sitemap>
</sitemapindex>"
`;

exports[`generateSitemapIndex > Sitemaps Protocol examples > generates sitemap index with only required loc field 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>http://www.example.com/sitemap1.xml</loc>
  </sitemap>
  <sitemap>
    <loc>http://www.example.com/sitemap2.xml</loc>
  </sitemap>
  <sitemap>
    <loc>http://www.example.com/sitemap3.xml</loc>
  </sitemap>
</sitemapindex>"
`;

exports[`generateSitemapIndex > Sitemaps Protocol examples > generates sitemap index without pretty print 1`] = `"<?xml version="1.0" encoding="UTF-8"?><sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"><sitemap><loc>http://www.example.com/sitemap1.xml.gz</loc><lastmod>2004-10-01</lastmod></sitemap><sitemap><loc>http://www.example.com/sitemap2.xml.gz</loc><lastmod>2005-01-01</lastmod></sitemap></sitemapindex>"`;

exports[`generateSitemapIndex > boundary cases > generates sitemap index with single sitemap 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>http://www.example.com/sitemap.xml</loc>
  </sitemap>
</sitemapindex>"
`;
